...
                    SizedBox(width: 20),
                    Center(
                      child: Column(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: [
                          MyDropdownButton(
                            key: Key('drop_down'),
                          ),
                        ],
                      ),
                    ),
                  ],
                ),
                const SizedBox(height: 20),
                MyOutlinedButton(
                  key: const Key('settings-button_go_to_parameter_page'),
                  onPressed: () {
                    print(context);
                  },
                  text: "Modification d'information",
                ),
              ],
...
