...
  @override
  _MyDropdownButtonState createState() => _MyDropdownButtonState();
}

class _MyDropdownButtonState extends State<MyDropdownButton> {
  late Future<String> _selectedItem;
  final List<String> _items = ['Clair', 'Sombre'];

  Future<String> getTheme() async {
    final prefs = await SharedPreferences.getInstance();
    return _items[prefs.getBool('isDarkTheme') == true ? 1 : 0];
  }

...
