...
    };
    return CustomPaint(
      painter: CurvePainter(curveColor),
      child: AppBar(
        leading: showBackButton
            ? BackButton(
                key: const Key('appbar-button_back'),
                onPressed: onBackButtonPressed!,
              )
            : null,
        title: textTitle == ""
            ? Image.asset(
                key: const Key('appbar-image_logo'),
...
